--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -1,36 +1,15 @@
 body
 {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	line-height: 20px;
-	color: #333333;
-	background-color:#EEE;
+	line-height:1.2em;
 	padding-top:50px;
+	-webkit-font-smoothing: subpixel-antialiased;
+	background-color:#EFEFEF;
 }
 
 /****************************************************************************
  *  main navigation bar
  *
  */
-
-.navbar
-{
-	margin-bottom:0;
-
-	background: #258dc8; /* Old browsers */
-	background: -moz-linear-gradient(top, #258dc8 0%, #499bc6 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#258dc8), color-stop(100%,#499bc6)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #258dc8 0%,#499bc6 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #258dc8 0%,#499bc6 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #258dc8 0%,#499bc6 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #258dc8 0%,#499bc6 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', endColorstr='#499bc6',GradientType=0 ); /* IE6-9 */
-}
-
-.navbar .navbar-brand
-{
-	color:#000;
-}
 
 .navbar .navbar-right
 {
@@ -42,42 +21,10 @@ body
 	font-size:12px;
 }
 
-.navbar .nav > li > a:hover,
-.navbar .nav > li > a:focus
-{
-	background-color:#1D76A9;
-}
-
-.navbar a,
-.navbar-nav > li > a,
-.navbar-nav > .open > a,
-.navbar-nav > .open > a:hover,
-.navbar-nav > .open > a:focus
-{
-	color:#FFF;
-}
-
-.navbar-nav > .open > a .caret,
-.navbar-nav > .open > a:hover .caret,
-.navbar-nav > .open > a:focus .caret,
-.navbar-nav > .dropdown > a .caret
-{
-	border-top-color: #FFF;
-	border-bottom-color: #FFF;
-}
-
-.navbar .dropdown.open .dropdown-toggle
-{
-	background-color:#155A82;
-}
-
 .navbar .dropdown-menu > li > a
 {
-	line-height:1.7;
-}
-
-.navbar-toggle .icon-bar {
-  background-color: white;
+	padding-top:0.4em;
+	padding-bottom:0.4em;
 }
 
 /****************************************************************************
@@ -90,22 +37,19 @@ body
 	margin-bottom:0;
 }
 
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1024px; /* or 950px */
-}
-
-#desktop
+.container-fluid
 {
 	background-color:white;
+	margin-right: auto;
+	margin-left: auto;
+	max-width: 60em; /* or 950px */
 }
 
 @media (min-width:768px)
 {
 	#desktop
 	{
-		box-shadow:0px 3px 5px #CCC;
+		border:1px solid #BFBFBF;
 	}
 }
 
@@ -116,9 +60,8 @@ body
 
 #schedule
 {
-	margin-top:5em;
+	margin-top:8em;
 	padding-bottom:1em;
-	color:#A2A2A2;
 }
 
 #schedule > *
@@ -128,6 +71,7 @@ body
 
 #schedule #heading
 {
+	text-align:center;
 	margin-left:0.5em;
 	margin-right:0.5em;
 }
@@ -140,7 +84,16 @@ body
 
 #schedule #contents
 {
-	margin-bottom:4px;
+	margin-top:10px;
+	margin-left:-15px;
+	margin-right:-16px;
+}
+
+#schedule #contents > *
+{
+	border-left:0;
+	border-right:0;
+	border-radius:0;
 }
 
 #schedule #contents li
@@ -169,7 +122,6 @@ body
 
 #content
 {
-	background-color: #fff;
 	padding:2em 2em;
 }
 
@@ -219,49 +171,24 @@ section
 	hyphens:auto;
 	-webkit-hyphens:auto;
 	-moz-hyphens:none;
+}
 
+section p, section ul, section ol, section blockquote
+{
 	font-family:Georgia, palatino, serif;
 	line-height:1.6;
 	font-size:16px;
-	margin-top:1em;
-}
-
-section h1, section h2, section h3, section h4
-{
-	font-family:"Helvetica Neue", helvetica;
-	margin-bottom:1em;
-	margin-top:1.2em;
-	line-height:1em;
+	font-weight:normal;
 }
 
 section h1
 {
-	line-height:1em;
-	font-size:1.5em;
-	padding:0;
+	font-size:26px;
 }
 
-section h2
+section p
 {
-	margin-top:1.5em;
-	font-size:1.2em;
-}
-
-section h2 small
-{
-    font-size:0.8em;
-}
-
-section h3
-{
-	font-size:1em;
-}
-
-section h4
-{
-	font-size: 0.8em;
-	color: gray;
-	margin-bottom:20px;
+	margin-top:1em;
 }
 
 section dd
