--- a/app/views/admin/users/export_grades.html.erb
+++ b/app/views/admin/users/export_grades.html.erb
@@ -1,4 +1,4 @@
-<div id="content" class="container">
+<div id="content">
 
 <%= render partial: 'course/grade_table', locals: { users: @users, psets: @psets, track: nil } %>
 
