--- a/app/views/layouts/with_schedule.html.erb
+++ b/app/views/layouts/with_schedule.html.erb
@@ -27,7 +27,7 @@
 	<%= render 'layouts/ie_block' %>
 	<%= render 'layouts/navbar' %>
 	
-	<div class="container-fluid">
+	<div class="container-fluid room-for-schedule">
 		<%= yield %>
 	</div>
 
