--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,23 +1,48 @@
-<div id="content">
+<%= form_tag '/profile/save', class:'form-horizontal' do |f| %>
 
-	<header class="page-header">
-		<h1>Profile</h1>
-	</header>
-
-	<%= form_tag '/profile/save' do |f| %>
-		<div class="form-group">
-			<label class="col-2 control-label" for="user_name">Full name</label>
-			<div class="col-10">
-				<%= text_field_tag('user[name]', current_user.name, required:true, class:'form-control') %>
-			</div>
+<div class="modal-dialog">
+	<div class="modal-content">
+		<div class="modal-header">
+			<h2 class="modal-title">Please register</h2>
 		</div>
-		<div class="form-group">
-			<label class="col-2 control-label" for="user_mail">E-mail</label>
-			<div class="col-10">
-				<%= text_field_tag('user[mail]', current_user.mail, required:true, class:'form-control') %>
-				<%= submit_tag 'Save', class:'btn' %>
-			</div>
-		</div>
-	<% end %>
+		<div class="modal-body" style="padding:4em;">
 
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="user_name">First and last name</label>
+				<div class="col-sm-8">
+					<%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="user_mail">E-mail</label>
+				<div class="col-sm-8">
+					<%= text_field_tag('user[mail]', (current_user.mail if current_user), required:true, class:'form-control') %>
+				</div>
+			</div>
+			
+			<% if Schedule.any? %>
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="user_mail">Your schedule</label>
+				<div class="col-sm-8">
+					<% Schedule.all.each do |schedule| %>
+					<div class="radio">
+						<label>
+							<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+							<%= schedule.description || schedule.name %>
+						</label>
+					</div>
+					<% end %>
+				</div>
+			</div>
+			<% end %>
+		</div>
+		<div class="modal-footer">
+			<!-- <button type="button" class="btn btn-default">Cancel / Logout</button> -->
+			<%= link_to 'Cancel', '/profile/logout', class: 'btn btn-default' %>
+			<%= submit_tag 'Create Profile', class:'btn btn-primary' %>
+		</div>
+	</div>
 </div>
+
+
+<% end %>
