--- a/app/views/page/_schedule.html.erb
+++ b/app/views/page/_schedule.html.erb
@@ -1,19 +1,17 @@
-<% @registrations.each do |registration| %>
-
 <div id="heading">
 
-	<h5><%= registration.schedule_span.name %></h5>
+	<h5><%= current_user.schedule_span.name %></h5>
 
-	<% @week_contents = registration.schedule_span.content %>
+	<% @week_contents = current_user.schedule_span.content %>
 	<p id="description" ><%= @week_contents.delete('description') %></p>
 
 </div>
 
 <div class="btn-group btn-group-justified">
-	<%= link_to({ action: :prev_in_schedule, registration_id: registration.id }, { method: :post, class: 'btn btn-xs' }) do %>
+	<%= link_to({ action: :prev_in_schedule }, { method: :post, class: 'btn btn-xs' }) do %>
 	<span class='glyphicon glyphicon-arrow-left'></span>
 	<% end %>
-	<%= link_to({ action: :next_in_schedule, registration_id: registration.id }, { method: :post, class: 'btn btn-xs' }) do %>
+	<%= link_to({ action: :next_in_schedule }, { method: :post, class: 'btn btn-xs' }) do %>
 	<span class='glyphicon glyphicon-arrow-right'></span>
 	<% end %>
 </div>
@@ -23,5 +21,3 @@
 	<a href="<%= link %>" class="list-group-item"><%= item.sub('[', '<span class="label label-info">').sub(']', '</span>').html_safe %></a>
 	<% end %>
 </div>
-
-<% end %>
