--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -482,3 +482,16 @@ body > .alert
 	border-left:none;
 	border-right:none;
 }
+
+.dropdown-menu .modal-dialog
+{
+	margin:0;
+	box-shadow:none;
+}
+
+.dropdown-menu .modal-dialog .modal-content
+{
+	margin:0;
+	box-shadow:none;
+	border:none;
+}
