--- a/app/views/course/_grade_table.html.erb
+++ b/app/views/course/_grade_table.html.erb
@@ -8,7 +8,7 @@
 		<th>Progress</th>
 		<% end %>
 		<% psets.each do |pset| %>
-		<th><%= pset.name %></th>
+		<th class="rotate"><div><%= pset.name %></div></th>
 		<% end %>
 		<th>
 			<form method="get" accept-charset="utf-8">
