--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@ $font-size-h2: 20px;
 $font-size-h3: 16px;
 $font-size-h4: 14px;
 
+@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "strap";
 @import "tweaks";
