--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -101,6 +101,11 @@ body
 	border-radius:0;
 }
 
+#schedule #contents .label
+{
+	text-transform:uppercase;
+}
+
 #schedule #contents li
 {
 	margin-top:0.25em;
