--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -1,7 +1,7 @@
 <div id="content">
 
 	<header class="page-header">
-		<h1>Grading <small><%= @pset.name %> by <%= @user.name %> / <%= @user.uvanetid %></small></small></h1>
+		<h1><%= @pset.name %> <small> by <%= @user.name %> / <%= @user.uvanetid %></small></small></h1>
 		<% if is_admin? and @submit %>
 		<%= link_to 'Put into grading list', course_touch_submit_url(submit_id: @submit.id), method: :post %> /
 		<% end %>
@@ -89,10 +89,10 @@
 						<div class="input-group">
 							<div class="input-group-addon"><%= f.label :correctness, '==' %></div>
 							<%= f.text_field :grade, class: 'form-control' %>
-							<div class="input-group-addon">
-								<button class="" type="button" id="pass-btn">P</button>
-								<button class="" type="button" id="fail-btn">F</button>
-							</div>
+<span class="input-group-btn">
+      								<button class="btn btn-default" type="button" id="pass-btn">P</button>
+								<button class="btn btn-default" type="button" id="fail-btn">F</button>
+							</span>
 						</div>
 					</div>
 				</div>
