--- a/app/views/grading/index.html.erb
+++ b/app/views/grading/index.html.erb
@@ -6,53 +6,57 @@
 	
 	<div class="row">
 	
-	<div class="col-sm-2">
+		<div class="col-sm-2">
 
-	<p>
-		Group:<br>
-		<div class="btn-group-vertical">
-			<%= link_to 'All', params.merge(group: nil), class: 'btn btn-default' %>
-			<% @groups.each do |g| %>
-			<%= link_to g.name, params.merge(group: g), class: 'btn btn-default' %>
+			<% if @groups.any? %>
+			<p>
+				Group:<br>
+				<div class="btn-group-vertical">
+					<%= link_to 'All', params.merge(group: nil), class: "btn btn-default #{'btn-primary' if params[:group].blank?}" %>
+					<% @groups.each do |g| %>
+					<%= link_to g.name, params.merge(group: g), class: "btn btn-default #{'btn-primary' if params[:group].to_i == g.id}" %>
+					<% end %>
+				</div>
+			</p>
 			<% end %>
-		</div>
-	</p>
 
-	<p>
-		Problem set:<br>
-		<div class="btn-group-vertical">
-			<%= link_to 'All', params.merge(pset: nil), class: 'btn btn-default' %>
-			<% @psets.each do |p| %>
-			<%= link_to p.name, params.merge(pset: p), class: 'btn btn-default' %>
+			<% if @psets.any? %>
+			<p>
+				Problem set:<br>
+				<div class="btn-group-vertical">
+					<%= link_to 'all', params.merge(pset: nil), class: "btn btn-default #{'btn-primary' if params[:pset].blank?}" %>
+					<% @psets.each do |p| %>
+					<%= link_to p.name, params.merge(pset: p), class: "btn btn-default #{'btn-primary' if params[:pset].to_i == p.id}" %>
+					<% end %>
+				</div>
+			</p>
 			<% end %>
+	
 		</div>
-	</p>
 	
-	</div>
-	
-	<div class="col-sm-10">
+		<div class="col-sm-10">
 
-	<table class="table table-bordered">
-		<tr>
-			<th>pset</th>
-			<th>name</th>
-			<th>id</th>
-			<th>submitted</th>
-			<th>grade</th>
-		</tr>
+			<table class="table table-bordered">
+				<tr>
+					<th>pset</th>
+					<th>name</th>
+					<th>id</th>
+					<th>submitted</th>
+					<th>grade</th>
+				</tr>
 		
-		<% @submits.each do |submit| %>
-		<tr>
-			<td><%= submit.pset.name %></td>
-			<td><%= link_to submit.user.name, grade_form_path(user_id: submit.user_id, pset_id: submit.pset_id) %></td>
-			<td><%= submit.user.uvanetid %></td>
-			<td><% if submit.submitted_at %><%= submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(submit.submitted_at) %> ago)<% end %></td>
-			<td><%= submit.grade.grade if submit.grade %></td>
-		</tr>
-		<% end %>
-	</table>
+				<% @submits.each do |submit| %>
+				<tr>
+					<td><%= submit.pset.name %></td>
+					<td><%= link_to submit.user.name, grade_form_path(user_id: submit.user_id, pset_id: submit.pset_id) %></td>
+					<td><%= submit.user.uvanetid %></td>
+					<td><% if submit.submitted_at %><%= submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(submit.submitted_at) %> ago)<% end %></td>
+					<td><%= submit.grade.grade if submit.grade %></td>
+				</tr>
+				<% end %>
+			</table>
 	
-	</div>
+		</div>
 	
 	</div>
 	
