--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -12,7 +12,7 @@
 
 <% if @page.pset.form || @page.pset.pset_files.length > 0 %>
 
-<table class="table table-bordered">
+<table class="table">
 
 	<% if @page.pset.form %>
 	<tr>
@@ -36,7 +36,7 @@
 
 <p>Notes: <%= text_area_tag 'notes', nil, class:'form-control' %></p>
 
-<p><%= submit_tag 'Submit for grading', class:'btn btn-warning' %></p>
+<p><%= submit_tag 'Submit for grading', class:'btn btn-primary' %></p>
 
 <script>
 $('#page_form').submit(function(){
