--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -12,7 +12,7 @@
 
 <% if @page.pset.form || @page.pset.pset_files.length > 0 %>
 
-<table class="table">
+<table class="table table-hover">
 
 	<% if @page.pset.form %>
 	<tr>
