--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<% if valid_profile? %>
+<% if current_user.valid_profile? %>
 
 	<% Track.for(current_user).each do |track_name, track_status| %>
 	<li role="presentation" class="dropdown-header" style="padding:2px 10px 0 10px;"><%= track_name %></li>
@@ -11,7 +11,7 @@
 	</li>
 	<li class="divider"></li>
 	<% end %>
-	<% if is_admin? %>
+	<% if current_user.is_admin? %>
 	<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post %></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-pencil"></i> Settings'.html_safe, admin_path %></li>
 	<li class="divider"></li>
@@ -35,7 +35,7 @@
 	<% end %>
 	<li class="divider"></li>
 	<% end %>
-	<% if is_assistant? %>
+	<% if current_user.is_assistant? %>
 	<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, grading_path %></li>
 	<% else %>
 	<li><%= link_to '<i class="glyphicon glyphicon-list"></i> Grades'.html_safe, profile_grades_path %></li>
