--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -46,6 +46,7 @@
 	<% else %>
 	<li><%= link_to '<i class="glyphicon glyphicon-list"></i> Grades'.html_safe, profile_grades_path %></li>
 	<% end %>
+	<li class="divider"></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-phone"></i> Pair with phone'.html_safe, profile_pair_path %></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-ban-circle"></i> Logout'.html_safe, profile_logout_path %></li>
 
