--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -10,8 +10,8 @@
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
 	
-	<link href="http://vjs.zencdn.net/c/video-js.css" rel="stylesheet">
-	<script src="http://vjs.zencdn.net/c/video.js"></script>
+	<link href="https://vjs.zencdn.net/c/video-js.css" rel="stylesheet">
+	<script src="https://vjs.zencdn.net/c/video.js"></script>
 	
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
@@ -19,7 +19,7 @@
 		});
 	</script>
 	<script type="text/javascript"
-	  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML.js">
+	  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML.js">
 	</script>
 </head>
 <body>
