--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,15 +1,14 @@
 <div id="content">
 
 	<header class="page-header">
-		<h1>Settings</h1>
+		<h1>Administration</h1>
 	</header>
 	
+	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Export Grades for Excel'.html_safe, admin_users_export_grades_path, class:'btn btn-default btn-lg' %>
 
-	<%= link_to '<span class="glyphicon glyphicon-fire"></span> Edit Admins'.html_safe, admin_admins_path, class:'btn btn-default btn-lg' %>
+	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Dump Grades for archiving'.html_safe, admin_dump_grades_path, class:'btn btn-default btn-lg' %>
 
-	<%= link_to '<i class="glyphicon glyphicon-gift"></i> Manage Dropbox'.html_safe, admin_dropbox_path, class:'btn btn-default btn-lg' if Dropbox.available? %>
-
-	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Export Grades'.html_safe, admin_users_export_grades_path, class:'btn btn-default btn-lg' %>
+	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Statistics'.html_safe, admin_stats_path, class:'btn btn-default btn-lg' %>
 
 	<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_users_import_path, class:'btn btn-default btn-lg' %>
 
