--- a/app/views/admin/import.html.erb
+++ b/app/views/admin/import.html.erb
@@ -1,12 +1,12 @@
 <div id="content">
 
 	<header class="page-header">
-		<h1>Import Users</h1>
+		<h1>Import groups</h1>
 	</header>
 
 	<p>Paste all data lines from a .xls datanose user export.</p>
 
-	<%= form_tag admin_users_import_groups_path, :method => :post do %>
+	<%= form_tag admin_import_groups_path, :method => :post do %>
 	<textarea name="paste" class="form-control"></textarea>
 	<p><input type="submit" class="btn"></p>
 	<% end %>
