--- a/app/views/config/dropbox.html.erb
+++ b/app/views/config/dropbox.html.erb
@@ -10,7 +10,7 @@
 		
 		<% else %>
 		There is no Dropbox connection.
-		<%= form_tag(admin_dropbox_connect_url) do %>
+		<%= form_tag(dropbox_connect_url) do %>
 		<%= submit_tag 'Connect', class:'btn' %>
 		<% end %>
 
